objects/sumoapp__ServiceOffered__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__DailyLimit__c</fullName>
        <label>Daily Limit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MonthlyLimit__c</fullName>
        <label>Monthly Limit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>sumoapp__Service__c</referenceTo>
        <relationshipLabel>SUMO Service/Skill Offered</relationshipLabel>
        <relationshipName>OfferedServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Service Offered Users</relationshipLabel>
        <relationshipName>ServiceOfferedUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__WeeklyLimit__c</fullName>
        <label>Weekly Limit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SUMO Service/Skill Offered</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Service/Skill Offered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Services/Skills Offered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>